samples/_failures_safe/1761082160_1f3b1b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_556117ed.c: In function ‘main’:
./samples/SAFE/__tmp_556117ed.c:142:12: error: missing terminating " character
  142 |     printf("Enter elements for matrix A (%zux%
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_556117ed.c:142:5: error: expected expression at end of input
  142 |     printf("Enter elements for matrix A (%zux%
      |     ^~~~~~
./samples/SAFE/__tmp_556117ed.c:142:5: error: expected declaration or statement at end of input
